<resources>
    <string name="app_name">Calculadora</string>
    <string name="action_settings">Settings</string>

    <string name="modulo">%</string>
    <string name="raiz">√</string>
    <string name="cuadrado">x²</string>
    <string name="equis">1/x</string>
    <string name="ce">CE</string>
    <string name="c">C</string>
    <string name="retroceso">DEL</string>
    <string name="dividir">÷</string>
    <string name="siete">7</string>
    <string name="ocho">8</string>
    <string name="nueve">9</string>
    <string name="por">x</string>
    <string name="cuatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="menos">-</string>
    <string name="uno">1</string>
    <string name="dos">2</string>
    <string name="tres">3</string>
    <string name="mas">+</string>
    <string name="posneg">±</string>
    <string name="cero">0</string>
    <string name="coma">,</string>
    <string name="igual">=</string>

    <string name="coseno">cos</string>
    <string name="sin">sin</string>
    <string name="tan">tan</string>
    <string name="sinh">sinh</string>
    <string name="cosh">cosh</string>
    <string name="los">log</string>
    <string name="cubo">x3</string>
    <string name="tanh">tanh</string>
</resources>
