<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="fill_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="10">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/tvPatalla"
        android:layout_weight="4"
        android:background="#FFFFFF"
        android:textColor="#000"
        android:text="0"
        android:textSize="48sp"
        android:gravity="bottom|end"
        android:padding="20dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:columnCount="4"
        android:rowCount="6">


        <TableRow android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <Button
                android:text="@string/modulo"
                android:id="@+id/buttonModulo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#50E9C0"
                android:textColor="#4D4D4D"
                android:textSize="24sp"
                android:textAlignment="center"
                android:layout_columnWeight="1"
                android:focusableInTouchMode="false"
                android:layout_rowWeight="1"
                android:layout_weight="1" />
            <Button
                android:text="@string/raiz"
                android:id="@+id/buttonRaiz"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#50E9C0"
                android:textColor="#4D4D4D"
                android:textSize="24sp"
                android:textAlignment="center"
                android:layout_columnWeight="1"
                android:focusableInTouchMode="false"
                android:layout_rowWeight="1"
                android:layout_weight="1" />
            <Button
                android:text="@string/cuadrado"
                android:id="@+id/buttonCuadrado"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#50E9C0"
                android:textColor="#4D4D4D"
                android:textSize="24sp"
                android:textAlignment="center"
                android:layout_columnWeight="1"
                android:focusableInTouchMode="false"
                android:layout_rowWeight="1"
                android:layout_weight="1" />
            <Button
                android:text="@string/equis"
                android:id="@+id/buttonX"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#50E9C0"
                android:textColor="#4D4D4D"
                android:textSize="24sp"
                android:textAlignment="center"
                android:layout_columnWeight="1"
                android:focusableInTouchMode="false"
                android:layout_rowWeight="1"
                android:layout_weight="1" />
        </TableRow>

        <TableRow android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <Button
                android:text="@string/ce"
                android:id="@+id/buttonCE"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#4D4D4D"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textAlignment="center"
                android:layout_columnWeight="1"
                android:focusableInTouchMode="false"
                android:layout_rowWeight="1"
                android:layout_weight="1" />
            <Button
                android:text="@string/c"
                android:id="@+id/buttonC"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#4D4D4D"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textAlignment="center"
                android:layout_columnWeight="1"
                android:focusableInTouchMode="false"
                android:layout_rowWeight="1"
                android:layout_weight="1" />
            <Button
                android:text="@string/retroceso"
                android:id="@+id/buttonRetroceso"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#4D4D4D"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textAlignment="center"
                android:layout_columnWeight="1"
                android:focusableInTouchMode="false"
                android:layout_rowWeight="1"
                android:layout_weight="1" />
            <Button
                android:text="@string/dividir"
                android:id="@+id/buttonDividir"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#6E6E6E"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textAlignment="center"
                android:layout_columnWeight="1"
                android:focusableInTouchMode="false"
                android:layout_rowWeight="1"
                android:layout_weight="1" />
        </TableRow>
        <TableRow android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <Button
                android:text="@string/siete"
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#4D4D4D"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textAlignment="center"
                android:layout_columnWeight="1"
                android:focusableInTouchMode="false"
                android:layout_rowWeight="1"
                android:layout_weight="1" />
            <Button
                android:text="@string/ocho"
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#4D4D4D"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textAlignment="center"
                android:layout_columnWeight="1"
                android:focusableInTouchMode="false"
                android:layout_rowWeight="1"
                android:layout_weight="1" />
            <Button
                android:text="@string/nueve"
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#4D4D4D"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textAlignment="center"
                android:layout_columnWeight="1"
                android:focusableInTouchMode="false"
                android:layout_rowWeight="1"
                android:layout_weight="1" />
            <Button
                android:text="@string/por"
                android:id="@+id/buttonMultiplicar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#6E6E6E"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textAlignment="center"
                android:layout_columnWeight="1"
                android:focusableInTouchMode="false"
                android:layout_rowWeight="1"
                android:layout_weight="1" />

        </TableRow>
        <TableRow android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <Button
                android:text="@string/cuatro"
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#4D4D4D"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textAlignment="center"
                android:layout_columnWeight="1"
                android:focusableInTouchMode="false"
                android:layout_rowWeight="1"
                android:layout_weight="1" />
            <Button
                android:text="@string/cinco"
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#4D4D4D"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textAlignment="center"
                android:layout_columnWeight="1"
                android:focusableInTouchMode="false"
                android:layout_rowWeight="1"
                android:layout_weight="1" />
            <Button
                android:text="@string/seis"
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#4D4D4D"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textAlignment="center"
                android:layout_columnWeight="1"
                android:focusableInTouchMode="false"
                android:layout_rowWeight="1"
                android:layout_weight="1" />
            <Button
                android:text="@string/menos"
                android:id="@+id/buttonMenos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#6E6E6E"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textAlignment="center"
                android:layout_columnWeight="1"
                android:focusableInTouchMode="false"
                android:layout_rowWeight="1"
                android:layout_weight="1" />
        </TableRow>
        <TableRow android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <Button
                android:text="@string/uno"
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#4D4D4D"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textAlignment="center"
                android:layout_columnWeight="1"
                android:focusableInTouchMode="false"
                android:layout_rowWeight="1"
                android:layout_weight="1" />
            <Button
                android:text="@string/dos"
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#4D4D4D"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textAlignment="center"
                android:layout_columnWeight="1"
                android:focusableInTouchMode="false"
                android:layout_rowWeight="1"
                android:layout_weight="1" />
            <Button
                android:text="@string/tres"
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#4D4D4D"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textAlignment="center"
                android:layout_columnWeight="1"
                android:focusableInTouchMode="false"
                android:layout_rowWeight="1"
                android:layout_weight="1" />
            <Button
                android:text="@string/mas"
                android:id="@+id/buttonMas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#6E6E6E"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textAlignment="center"
                android:layout_columnWeight="1"
                android:focusableInTouchMode="false"
                android:layout_rowWeight="1"
                android:layout_weight="1" />
        </TableRow>
        <TableRow android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <Button
                android:text="@string/posneg"
                android:id="@+id/buttonPosNeg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#4D4D4D"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textAlignment="center"
                android:layout_columnWeight="1"
                android:focusableInTouchMode="false"
                android:layout_rowWeight="1"
                android:layout_weight="1" />
            <Button
                android:text="@string/cero"
                android:id="@+id/button0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#4D4D4D"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textAlignment="center"
                android:layout_columnWeight="1"
                android:focusableInTouchMode="false"
                android:layout_rowWeight="1"
                android:layout_weight="1" />
            <Button
                android:text="@string/coma"
                android:id="@+id/buttonComa"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#4D4D4D"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textAlignment="center"
                android:layout_columnWeight="1"
                android:focusableInTouchMode="false"
                android:layout_rowWeight="1"
                android:layout_weight="1" />
            <Button
                android:text="@string/igual"
                android:id="@+id/buttonIgual"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#6E6E6E"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textAlignment="center"
                android:layout_columnWeight="1"
                android:focusableInTouchMode="false"
                android:layout_rowWeight="1"
                android:layout_weight="1" />

        </TableRow>

    </TableLayout>
</LinearLayout>
